tests/ui/invalid/invalid-debugger-visualizer-target.rs
#[debugger_visualizer(natvis_file = "../foo.natvis")] //~ ERROR attribute should be applied to a module
fn main() {}
